--- a/Localizing-Deployment.html
+++ b/Localizing-Deployment.html
@@ -158,7 +158,7 @@
                 </div>
                 <figure class="deploy-figure">
                     <img src="pictures/AI_Hardware_Rack.png" alt="Close-up of GPU hardware" loading="lazy">
-                    <figcaption>Consumer GPUs with ample VRAM comfortably serve 7B–13B parameter local assistants.</figcaption>
+                    <figcaption>Consumer GPUs with (8-16) GB VRAM comfortably serve 7B–13B parameter local assistants.</figcaption>
                 </figure>
             </div>
         </section>
