--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <span class="dropdown-label">Pages</span>
         </button>
         <div id="site-nav-dropdown" class="dropdown-menu" role="menu" aria-label="Select a page">
-            <a role="menuitem" href="LLM-Home.html">LLM Home</a>
+            <a role="menuitem" href="index.html">LLM Home</a>
             <a role="menuitem" href="RAG-VectorDB.html">RAG & Vector DBs</a>
             <a role="menuitem" href="Localizing-Deployment.html">Localizing LLMs</a>
         </div>
