--- a/Localizing-Deployment.html
+++ b/Localizing-Deployment.html
@@ -13,8 +13,7 @@
             <div class="deploy-hero-copy">
                 <span class="deploy-hero-kicker">Secure autonomy</span>
                 <h1 class="deploy-hero-heading" id="deploy-hero-heading">
-                    <span class="deploy-heading-primary">Localizing LLMs</span>
-                    <span class="deploy-heading-sub">Self-Hosting for Privacy &amp; Control</span>
+                    Localizing LLMs for Privacy
                 </h1>
                 <p class="deploy-hero-subline">
                     Take ownership of your AI stack by running inference close to your data. Local deployments keep sensitive prompts on hardware you trust while eliminating rate limits from third-party APIs.
