--- a/RAG-VectorDB.html
+++ b/RAG-VectorDB.html
@@ -13,9 +13,7 @@
             <div class="rag-hero-copy">
                 <span class="rag-hero-kicker">Retrieval-Augmented Generation</span>
                 <h1 class="rag-hero-heading" id="rag-hero-heading">
-                    <span class="rag-heading-primary">RAG</span>
-                    <span class="rag-heading-divider" aria-hidden="true"></span>
-                    <span class="rag-heading-secondary">Vector Database</span>
+                    RAG &amp; Vector Databases
                 </h1>
                 <p class="rag-hero-subline">Fusing contextual retrieval with fast semantic search</p>
             </div>
