--- a/index.html
+++ b/index.html
@@ -167,11 +167,11 @@
         <div class="footer-meta">
             <div class="footer-item">
                 <span class="footer-label">Last Update</span>
-                <span class="footer-value" id="last-update-date" aria-live="polite">2025-12-13</span>
+                <span class="footer-value" id="last-update-date" aria-live="polite">2025-12-17</span>
             </div>
             <div class="footer-item">
                 <span class="footer-label">Contact</span>
-                <a class="footer-value" data-type="link" href="nyanlinhtunnlh873@gmail.com">nyanlinhtunnlh873@gmail.com</a>
+                <a class="footer-value" data-type="link" href="mailto:nyanlinhtunnlh873@gmail.com">nyanlinhtunnlh873@gmail.com</a>
             </div>
         </div>
     </footer>
